# universal-skills

./: .bumpversion.cfg  .codespellignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  README.md  STANDARDS.md  agent-builder.skill  analyze_portainer_health.skill  bandit_output.txt  index.html  install.ps1  install.sh  mkdocs.yml  pre-commit-out.txt  pyproject.toml  self-improver.skill
.github/workflows/: pipeline.yml
docs/: index.md  overview.md  skill-catalog-audit.md  skill-catalog-improvement-roadmap.md
overview/: index.html
scripts/: check_atomicity.py  check_frontmatter_portability.py  check_mermaid_blocks.py  check_path_portability.py  gen_bumpversion.py  gen_connector_catalog.py  inject_package_deploy_readme.py  normalize_names.py  normalize_paths.py  security_sanitizer.py  tag_skill_type.py
search/: search_index.json
tests/: conftest.py  test_accept_changes_security.py  test_agent_package_builder_security.py  test_code_enhancer.py  test_concept_parity.py  test_data_skills.py  test_dependency_modernizer.py  test_emit_manifests.py  test_frontmatter_adapter.py  test_inject_package_deploy_readme.py  test_mcp_client_onboarder.py  test_mcp_registration.py  test_office_safe_zip_security.py  test_path_portability.py  test_prompt_builder.py  test_rotation_lib.py  test_safe_http_security.py  test_skill_builder.py  test_skill_catalog_auditor.py  test_skill_workflow_builder.py  test_skills.py  test_startup.py  test_web_crawler_security.py  test_wheel_contents.py  test_workflows_compile.py  test_workspace_source_drift.py  test_yaml.py
universal_skills/: skill_utilities.py
universal_skills/_security/: __init__.py  http.py
universal_skills/agent/: CRON.md  MEMORY.md
universal_skills/agent-tools/agent-browser/: SKILL.md  bootstrap.sh
universal_skills/agent-tools/agent-builder/: SKILL.md
universal_skills/agent-tools/agent-package-builder/: PARITY_MANIFEST.md  SKILL.md
universal_skills/agent-tools/agent-spawner/: SKILL.md
universal_skills/agent-tools/agent-workflows/: SKILL.md  providers.py
universal_skills/agent-tools/agents-md-generator/: SKILL.md
universal_skills/agent-tools/api-client-builder/: SKILL.md
universal_skills/agent-tools/api-wrapper-builder/: SKILL.md
universal_skills/agent-tools/autonomous-contribution/: SKILL.md
universal_skills/agent-tools/autonomous-research-loop/: SKILL.md
universal_skills/agent-tools/kg-delegate/: SKILL.md
universal_skills/agent-tools/kg-delegation-router/: SKILL.md
universal_skills/agent-tools/knowledge-graph-ingest/: SKILL.md
universal_skills/agent-tools/mcp-builder/: SKILL.md
universal_skills/agent-tools/mcp-client/: SKILL.md
universal_skills/agent-tools/mcp-installer/: SKILL.md
universal_skills/agent-tools/prompt-builder/: SKILL.md
universal_skills/agent-tools/skill-catalog-auditor/: SKILL.md
universal_skills/agent-tools/skill-graph-builder/: SKILL.md
universal_skills/agent-tools/skill-workflow-builder/: SKILL.md
universal_skills/agent-tools/unattended-loop-driver/: SKILL.md
universal_skills/agent_data/: A2A_AGENTS.md  CRON_LOG.md  IDENTITY.md
universal_skills/content/content-draft-writer/: SKILL.md
universal_skills/content/content-outline-builder/: SKILL.md
universal_skills/content/copy-editor/: SKILL.md
universal_skills/content/publication-preflight/: SKILL.md
universal_skills/core/: skill_installer.py  universal_installer.py
universal_skills/core/code-enhancer/: SKILL.md
universal_skills/core/efficient-mode/: SKILL.md
universal_skills/core/kg-report-persister/: SKILL.md
universal_skills/core/self-improver/: SKILL.md
universal_skills/core/session-handoff/: SKILL.md
universal_skills/core/skill-builder/: SKILL.md
universal_skills/core/skill-installer/: SKILL.md
universal_skills/core/skill_installer/: SKILL.md  __init__.py
universal_skills/core/universal-installer/: SKILL.md
universal_skills/creative/algorithmic-art/: SKILL.md
universal_skills/creative/brand-guidelines/: SKILL.md
universal_skills/creative/canvas-design/: SKILL.md
universal_skills/creative/creative-media/: SKILL.md
universal_skills/data-workflows/dataset-readiness-assessment/: SKILL.md
universal_skills/data/data-dictionary-builder/: SKILL.md
universal_skills/data/data-quality-auditor/: SKILL.md
universal_skills/data/dataset-profiler/: SKILL.md
universal_skills/dev-workflows/c4-architecture/: SKILL.md
universal_skills/dev-workflows/code-walkthrough/: SKILL.md
universal_skills/dev-workflows/diagnose/: SKILL.md
universal_skills/dev-workflows/gitlab-mr-publisher/: SKILL.md
universal_skills/dev-workflows/interactive-explain/: SKILL.md
universal_skills/dev-workflows/manual-testing-enhanced/: SKILL.md
universal_skills/dev-workflows/tdd-methodology/: SKILL.md
universal_skills/dev-workflows/workspace-validator/: SKILL.md
universal_skills/development-workflows/agent-benchmark-suite/: SKILL.md
universal_skills/development-workflows/agent-prompt-optimizer/: SKILL.md
universal_skills/development-workflows/agent-utilities-evolution/: SKILL.md
universal_skills/development-workflows/agent_benchmark_suite/: SKILL.md
universal_skills/development-workflows/agents-md-generation/: SKILL.md
universal_skills/development-workflows/api-breaking-change-migration/: SKILL.md
universal_skills/development-workflows/api-documentation-gen/: SKILL.md
universal_skills/development-workflows/api_breaking_change_migration/: SKILL.md
universal_skills/development-workflows/api_documentation_gen/: SKILL.md
universal_skills/development-workflows/architecture-diagram-gen/: SKILL.md
universal_skills/development-workflows/architecture-review-swarm/: SKILL.md
universal_skills/development-workflows/architecture_diagram_gen/: SKILL.md
universal_skills/docs/: infrastructure-orchestrator-architecture.md
universal_skills/freqtrade-executor/: SKILL.md
universal_skills/infrastructure-orchestrator/: SKILL.md
universal_skills/qlib-backtester/: SKILL.md
universal_skills/scratch/: compile_all_diagnostics.py
universal_skills/trading-debate/: SKILL.md
(+1937 files in other folders)
