[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "universal-skills"
version = "0.29.0"
description = "A collection of universal skills for AI agents"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11"
dependencies = [ ]

[project.optional-dependencies]
test = [
    "pytest-xdist>=3.6.0",
    "pytest",
    "pytest-asyncio", "pytest-cov",
    "PyYAML",
    "httpx"
]
agent-browser = []
agent-builder = ["PyYAML"]
agent-package-builder = []
agent-spawner = ["python-dotenv"]
mcp-client = ["fastmcp", "python-dotenv"]
agent-workflows = ["httpx", "PyYAML"]
algorithmic-art = []
api-wrapper-builder = ["requests", "pydantic"]
brainstorming = []
brand-guidelines = []
browser-tools = ["playwright", "Pillow"]
c4-architecture = []
canvas-design = []
cloudflare-deploy = ["requests", "python-dotenv"]
creative-media = ["Pillow"]
database-tools = ["mysql-connector-python", "psycopg2-binary", "pymssql"]
document-converter = ["mammoth", "markdownify", "pymupdf4llm"]
developer-utilities = ["bcrypt", "cryptography", "sqlparse", "toml", "user-agents", "PyYAML"]
document-tools = ["Pillow", "defusedxml", "python-docx", "EbookLib", "lxml", "openpyxl", "pdf2image", "pdfplumber", "python-pptx", "Pygments", "pypdf", "validators"]
github-tools = ["requests", "python-dotenv"]
google-workspace = ["keyring", "requests"]
internal-comms = []
jupyter-notebook = ["nbformat", "nbconvert"]
marp-presentations = []
mcp-builder = ["fastmcp"]
mermaid-diagrams = []
product-strategy = []
pre-mortem = []
react-development = []
react-native-skills = []
security-tools = ["networkx", "requests"]
session-handoff = []
skill-builder = ["PyYAML"]
skill-installer = []
skill-graph-builder = ["crawl4ai", "playwright", "psutil", "requests", "pymupdf4llm>=0.0.17", "mdsplit", "markitdown>=0.1.5", "pyyaml>=6.0"]
skill-workflow-builder = ["PyYAML"]
system-tools = ["psutil"]
tdd-methodology = []
theme-factory = []
user-research = []
web-artifacts = ["requests"]
web-crawler = ["crawl4ai", "playwright", "psutil", "requests"]
web-design-guidelines = []
web-search = ["ddgs", "requests"]
web-fetch = ["crawl4ai", "playwright", "psutil", "requests"]
website-builder = []
website-cloner = []
code-enhancer = ["requests", "packaging", "keepachangelog>=2.0.0"]



all = [
    "universal-skills[agent-browser]>=0.28.0",
    "universal-skills[agent-builder]>=0.28.0",
    "universal-skills[agent-package-builder]>=0.28.0",
    "universal-skills[agent-spawner]>=0.28.0",
    "universal-skills[mcp-client]>=0.28.0",
    "universal-skills[agent-workflows]>=0.28.0",
    "universal-skills[algorithmic-art]>=0.28.0",
    "universal-skills[api-wrapper-builder]>=0.28.0",
    "universal-skills[brainstorming]>=0.28.0",
    "universal-skills[brand-guidelines]>=0.28.0",
    "universal-skills[browser-tools]>=0.28.0",
    "universal-skills[c4-architecture]>=0.28.0",
    "universal-skills[canvas-design]>=0.28.0",
    "universal-skills[cloudflare-deploy]>=0.28.0",
    "universal-skills[creative-media]>=0.28.0",
    "universal-skills[database-tools]>=0.28.0",
    "universal-skills[developer-utilities]>=0.28.0",
    "universal-skills[document-converter]>=0.28.0",
    "universal-skills[document-tools]>=0.28.0",
    "universal-skills[github-tools]>=0.28.0",
    "universal-skills[google-workspace]>=0.28.0",
    "universal-skills[internal-comms]>=0.28.0",
    "universal-skills[product-strategy]>=0.28.0",
    "universal-skills[pre-mortem]>=0.28.0",
    "universal-skills[react-development]>=0.28.0",
    "universal-skills[react-native-skills]>=0.28.0",
    "universal-skills[security-tools]>=0.28.0",
    "universal-skills[session-handoff]>=0.28.0",
    "universal-skills[skill-builder]>=0.28.0",
    "universal-skills[skill-graph-builder]>=0.28.0",
    "universal-skills[skill-workflow-builder]>=0.28.0",
    "universal-skills[skill-installer]>=0.28.0",
    "universal-skills[system-tools]>=0.28.0",
    "universal-skills[tdd-methodology]>=0.28.0",
    "universal-skills[theme-factory]>=0.28.0",
    "universal-skills[user-research]>=0.28.0",
    "universal-skills[web-artifacts]>=0.28.0",
    "universal-skills[web-crawler]>=0.28.0",
    "universal-skills[web-design-guidelines]>=0.28.0",
    "universal-skills[web-search]>=0.28.0",
    "universal-skills[web-fetch]>=0.28.0",
    "universal-skills[website-builder]>=0.28.0",
    "universal-skills[website-cloner]>=0.28.0",
    "universal-skills[code-enhancer]>=0.28.0",
]



[project.scripts]
install-skills = "universal_skills.core.skill_installer:main"

[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
universal_skills = [ "skills/**" ]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
