[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "universal-skills"
version = "1.0.1"
description = "A collection of universal skills for AI agents"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11"
dependencies = [ ]

[project.optional-dependencies]
test = [
    "pytest-xdist>=3.6.0",
    "pytest",
    "pytest-asyncio", "pytest-cov",
    "pytest-timeout",
    "PyYAML",
    "httpx"
]
agent-browser = []
agent-builder = ["PyYAML"]
agent-package-builder = []
agent-spawner = ["python-dotenv"]
mcp-client = ["fastmcp", "python-dotenv"]
agent-workflows = ["httpx", "PyYAML"]
automated-credential-rotation = []
algorithmic-art = []
api-wrapper-builder = ["requests", "pydantic"]
brainstorming = []
brand-guidelines = []
browser-tools = ["playwright", "Pillow"]
c4-architecture = []
canvas-design = []
cloudflare-deploy = ["requests", "python-dotenv"]
creative-media = ["Pillow"]
database-tools = ["mysql-connector-python", "psycopg2-binary", "pymssql"]
document-converter = ["mammoth", "markdownify", "pymupdf4llm"]
developer-utilities = ["bcrypt", "cryptography", "sqlparse", "toml", "user-agents", "PyYAML"]
document-tools = ["Pillow", "defusedxml", "python-docx", "EbookLib", "lxml", "openpyxl", "pdf2image", "pdfplumber", "python-pptx", "Pygments", "pypdf", "validators"]
github-backlog-planner = []
github-ci-failure-sweep = []
github-tools = ["requests", "python-dotenv"]
google-workspace = ["keyring", "requests"]
internal-comms = []
jupyter-notebook = ["nbformat", "nbconvert"]
marp-presentations = []
mcp-builder = ["fastmcp"]
mermaid-diagrams = []
product-strategy = []
pre-mortem = []
react-development = []
react-native-skills = []
security-tools = ["networkx", "requests"]
session-handoff = []
skill-builder = ["PyYAML"]
skill-installer = []
skill-graph-builder = ["crawl4ai", "playwright", "psutil", "requests", "pymupdf4llm>=0.0.17", "pyyaml>=6.0"]
skill-workflow-builder = ["PyYAML"]
system-tools = ["psutil"]
tdd-methodology = []
theme-factory = []
user-research = []
web-artifacts = ["requests"]
web-crawler = ["crawl4ai", "playwright", "psutil", "requests"]
web-design-guidelines = []
web-search = ["ddgs", "requests"]
web-fetch = ["crawl4ai", "playwright", "psutil", "requests"]
website-builder = []
website-cloner = []
code-enhancer = ["requests", "packaging", "keepachangelog>=2.0.0", "psutil>=5.9.0"]



all = [
    "universal-skills[agent-browser]>=1.0.0",
    "universal-skills[agent-builder]>=1.0.0",
    "universal-skills[agent-package-builder]>=1.0.0",
    "universal-skills[agent-spawner]>=1.0.0",
    "universal-skills[mcp-client]>=1.0.0",
    "universal-skills[agent-workflows]>=1.0.0",
    "universal-skills[algorithmic-art]>=1.0.0",
    "universal-skills[api-wrapper-builder]>=1.0.0",
    "universal-skills[brainstorming]>=1.0.0",
    "universal-skills[brand-guidelines]>=1.0.0",
    "universal-skills[browser-tools]>=1.0.0",
    "universal-skills[c4-architecture]>=1.0.0",
    "universal-skills[canvas-design]>=1.0.0",
    "universal-skills[cloudflare-deploy]>=1.0.0",
    "universal-skills[creative-media]>=1.0.0",
    "universal-skills[database-tools]>=1.0.0",
    "universal-skills[developer-utilities]>=1.0.0",
    "universal-skills[document-converter]>=1.0.0",
    "universal-skills[document-tools]>=1.0.0",
    "universal-skills[github-tools]>=1.0.0",
    "universal-skills[google-workspace]>=1.0.0",
    "universal-skills[internal-comms]>=1.0.0",
    "universal-skills[product-strategy]>=1.0.0",
    "universal-skills[pre-mortem]>=1.0.0",
    "universal-skills[react-development]>=1.0.0",
    "universal-skills[react-native-skills]>=1.0.0",
    "universal-skills[security-tools]>=1.0.0",
    "universal-skills[session-handoff]>=1.0.0",
    "universal-skills[skill-builder]>=1.0.0",
    "universal-skills[skill-graph-builder]>=1.0.0",
    "universal-skills[skill-workflow-builder]>=1.0.0",
    "universal-skills[skill-installer]>=1.0.0",
    "universal-skills[system-tools]>=1.0.0",
    "universal-skills[tdd-methodology]>=1.0.0",
    "universal-skills[theme-factory]>=1.0.0",
    "universal-skills[user-research]>=1.0.0",
    "universal-skills[web-artifacts]>=1.0.0",
    "universal-skills[web-crawler]>=1.0.0",
    "universal-skills[web-design-guidelines]>=1.0.0",
    "universal-skills[web-search]>=1.0.0",
    "universal-skills[web-fetch]>=1.0.0",
    "universal-skills[website-builder]>=1.0.0",
    "universal-skills[website-cloner]>=1.0.0",
    "universal-skills[code-enhancer]>=1.0.0",
]



[project.scripts]
install-skills = "universal_skills.core.skill_installer:main"

[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
universal_skills = [ "skills/**" ]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
