[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "universal-skills"
version = "1.2.1"
description = "A collection of universal skills for AI agents"
readme = "README.md"
license = "MIT"
classifiers = [ "Development Status :: 5 - Production/Stable", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11"
dependencies = [ ]

[project.optional-dependencies]
test = [
    "build>=1.5.0",
    # CONCEPT:PHASE2-RECONCILE — capped back under 83. ccxt==4.5.67
    # (emerald-exchange's Phase-1 floor, and the only ccxt release available)
    # hard-pins `setuptools==82.0.1` exactly.
    "setuptools>=80.9.0,<83.0.0",
    "wheel>=0.47.0",
    "pytest-xdist>=3.8.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0", "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "PyYAML>=6.0.3",
    "httpx>=0.28.1"
]
agent-browser = []
agent-builder = ["PyYAML>=6.0.3"]
agent-package-builder = []
agent-spawner = []
mcp-client = ["fastmcp>=3.4.4", "python-dotenv>=1.2.2"]
agent-workflows = ["httpx>=0.28.1", "PyYAML>=6.0.3"]
automated-credential-rotation = []
algorithmic-art = []
api-wrapper-builder = ["requests>=2.34.2", "pydantic>=2.13.4"]
brainstorming = []
brand-guidelines = []
browser-tools = ["playwright>=1.61.0", "Pillow>=12.3.0"]
c4-architecture = []
canvas-design = []
cloudflare-deploy = ["requests>=2.34.2", "python-dotenv>=1.2.2"]
creative-media = ["Pillow>=12.3.0"]
database-tools = ["mysql-connector-python>=9.7.0", "psycopg2-binary>=2.9.12", "pymssql>=2.3.13"]
document-converter = ["mammoth>=1.12.0", "markdownify>=1.2.3", "pymupdf4llm>=1.28.0"]
developer-utilities = ["bcrypt>=5.0.0", "cryptography>=49.0.0", "sqlparse>=0.5.5", "toml>=0.10.2", "user-agents>=2.2.0", "PyYAML>=6.0.3"]
document-tools = ["Pillow>=12.3.0", "defusedxml>=0.7.1", "python-docx>=1.2.0", "EbookLib>=0.20", "lxml>=6.1.1", "openpyxl>=3.1.5", "pdf2image>=1.17.0", "pdfplumber>=0.11.10", "python-pptx>=1.0.2", "Pygments>=2.20.0", "pypdf>=6.14.2", "validators>=0.35.0"]
github-backlog-planner = []
github-ci-failure-sweep = []
github-tools = ["requests>=2.34.2", "python-dotenv>=1.2.2"]
google-workspace = ["keyring>=25.7.0", "requests>=2.34.2"]
internal-comms = []
jupyter-notebook = ["nbformat>=5.10.4", "nbconvert>=7.17.1"]
marp-presentations = []
mcp-builder = ["defusedxml>=0.7.1", "fastmcp>=3.4.4"]
mermaid-diagrams = []
product-strategy = []
pre-mortem = []
react-development = []
react-native-skills = []
security-tools = ["networkx>=3.6.1", "requests>=2.34.2"]
session-handoff = []
skill-builder = ["PyYAML>=6.0.3"]
skill-catalog-auditor = ["PyYAML>=6.0.3"]
universal-installer = []
skill-graph-builder = ["crawl4ai>=0.9.2", "playwright>=1.61.0", "psutil>=7.2.2", "requests>=2.34.2", "pymupdf4llm>=1.28.0", "pyyaml>=6.0.3"]
skill-workflow-builder = ["PyYAML>=6.0.3"]
system-tools = ["psutil>=7.2.2"]
tdd-methodology = []
theme-factory = []
user-research = []
web-artifacts = ["requests>=2.34.2"]
web-crawler = ["crawl4ai>=0.9.2", "playwright>=1.61.0", "psutil>=7.2.2", "requests>=2.34.2"]
web-design-guidelines = []
web-search = ["ddgs>=9.14.4", "requests>=2.34.2"]
web-fetch = []
website-builder = []
website-cloner = []
code-enhancer = ["requests>=2.34.2", "packaging>=26.2", "keepachangelog>=2.0.0", "psutil>=7.2.2"]



all = [
    "universal-skills[agent-browser]>=1.0.0",
    "universal-skills[agent-builder]>=1.0.0",
    "universal-skills[agent-package-builder]>=1.0.0",
    "universal-skills[agent-spawner]>=1.0.0",
    "universal-skills[mcp-client]>=1.0.0",
    "universal-skills[agent-workflows]>=1.0.0",
    "universal-skills[algorithmic-art]>=1.0.0",
    "universal-skills[api-wrapper-builder]>=1.0.0",
    "universal-skills[brainstorming]>=1.0.0",
    "universal-skills[brand-guidelines]>=1.0.0",
    "universal-skills[browser-tools]>=1.0.0",
    "universal-skills[c4-architecture]>=1.0.0",
    "universal-skills[canvas-design]>=1.0.0",
    "universal-skills[cloudflare-deploy]>=1.0.0",
    "universal-skills[creative-media]>=1.0.0",
    "universal-skills[database-tools]>=1.0.0",
    "universal-skills[developer-utilities]>=1.0.0",
    "universal-skills[document-converter]>=1.0.0",
    "universal-skills[document-tools]>=1.0.0",
    "universal-skills[github-tools]>=1.0.0",
    "universal-skills[google-workspace]>=1.0.0",
    "universal-skills[internal-comms]>=1.0.0",
    "universal-skills[product-strategy]>=1.0.0",
    "universal-skills[pre-mortem]>=1.0.0",
    "universal-skills[react-development]>=1.0.0",
    "universal-skills[react-native-skills]>=1.0.0",
    "universal-skills[security-tools]>=1.0.0",
    "universal-skills[session-handoff]>=1.0.0",
    "universal-skills[skill-builder]>=1.0.0",
    "universal-skills[skill-catalog-auditor]>=1.0.0",
    "universal-skills[skill-graph-builder]>=1.0.0",
    "universal-skills[skill-workflow-builder]>=1.0.0",
    "universal-skills[universal-installer]>=1.0.0",
    "universal-skills[system-tools]>=1.0.0",
    "universal-skills[tdd-methodology]>=1.0.0",
    "universal-skills[theme-factory]>=1.0.0",
    "universal-skills[user-research]>=1.0.0",
    "universal-skills[web-artifacts]>=1.0.0",
    "universal-skills[web-crawler]>=1.0.0",
    "universal-skills[web-design-guidelines]>=1.0.0",
    "universal-skills[web-search]>=1.0.0",
    "universal-skills[web-fetch]>=1.0.0",
    "universal-skills[website-builder]>=1.0.0",
    "universal-skills[website-cloner]>=1.0.0",
    "universal-skills[code-enhancer]>=1.0.0",
]



[project.scripts]
install-universal = "universal_skills.core.universal_installer:main"
install-skills = "universal_skills.core.skill_installer:main"

[[project.authors]]
name = "Repository Maintainers"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
universal_skills = [
    "**/*",
    "**/.*",
    "**/.*/**/*",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "**/__pycache__/*",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "**/.pytest_cache/*",
    "**/.mypy_cache/*",
    "**/.ruff_cache/*",
    "**/*.skill",
    "research/comparative-analysis/results/*",
    "research/comparative-analysis/results_*.json",
]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "universal_skills*",]
namespaces = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
